--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,11 @@
 			<version>4.4.3</version>
 		</dependency>
 		<dependency>
+			<groupId>net.lbruun.springboot</groupId>
+			<artifactId>preliquibase-spring-boot-starter</artifactId>
+			<version>1.1.1</version>
+		</dependency>
+		<dependency>
 			<groupId>org.postgresql</groupId>
 			<artifactId>postgresql</artifactId>
 			<version>42.2.18</version>
